--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced User Card</title>
     <!-- The Normalized  -->
-    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <!-- The Icon  -->
-    <link rel="stylesheet" href="/css/all.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
     <!-- The main css -->
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +24,7 @@
             <!-- Start Header  -->
             <div class="header">
                 <div class="logo">
-                    <img src="/image/avatar.png" alt="">
+                    <img src="image/avatar.png" alt="">
                     <div class="text">
                         <h1>Someone</h1>
                         <p>Front-End Devoloper</p>
@@ -69,7 +69,7 @@
                 </div>
                 <div class="content-info">
                     <div class="image">
-                        <img src="/image/man.png" alt="">
+                        <img src="image/man.png" alt="">
                     </div>
                     <div class="info">
                         <h1>Who I Am</h1>
